--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+Version 2.0
+===========
+This version for OpenCPN v5.
+Now compiles on Windows and Linux.
+Changes
+For ease of maintenance the Functions button has been removed from the toolbar. Still available from the Calculator dialog.
+Uses SVG icons for the Toolbar.
+
 Version 1.8
 ===========
 Testing for cross-compiling.
